# ai_blackbox_review_mirror

./: .gitignore  .gitlab-ci.yml  README.md  ck --lost-found  er.name  how 10d33fad0bc5486db19ca0f15b1da9918780fbc7
Data/: README.md
Docs/: READ.md  READ_HW.md
ai/: .gitlab-ai-ci.yml  README.md  pyproject.toml
ai/src/app/: config.py  main.py
ai/src/app/models/: request_models.py  response_models.py
ai/src/app/resources/: models.py
ai/src/app/resources/accident_datas/: accident_data.csv
ai/src/app/resources/label_maps/: label_map.json
ai/src/app/resources/lstm_models/: lstm_model.pt
ai/src/app/routers/: __init__.py  api.py
ai/src/app/routers/endpoints/: __init__.py  health_check.py  report.py
ai/src/app/services/: models.py  report_service.py
ai/src/app/services/predict/: analyzer.py  estimate_vehicleA_trajectory.py  extract_frames.py  generate_accident_type_from_csv.py  generate_background_subtraction.py  generate_final_report.py  generate_inferred_meta.py  generate_timeline_log.py  generate_traffic_light_events.py  generate_traffic_light_info.py  generate_vtn_input.py  infer_vtn.py  model_loader.py  preprocessor.py  run_lstm_inference.py  run_yolo_inference.py
ai/src/app/services/report/: report_generator.py  video_analyzer.py  video_downloader.py
backend/: .gitlab-be-ci.yml  Dockerfile  HELP.md  build.gradle
cicd_test/AI/: .gitlab-ai-ci.yml  Dockerfile  README.md  app.py  pyproject.toml
create-issue/: README.md  create_issue.py  create_issue.sh
deploy/: .gitignore  .gitlab-deploy-ci.yml  Dockerfile  Jenkinsfile  README.md  (+1 more)
(+3428 files in other folders)
