[project]
name = "ai"
version = "0.1.0"
description = "교통사고 영상 데이터 분석 AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "mmdet>=3.3.0",
    "mmengine>=0.10.0",
    "mmcv>=2.1.0",
    "openmim>=0.3.9",
    "tqdm>=4.66.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "numpy==1.26.4", # 버전관리
    "pandas>=2.0.0",
    "ultralytics>=8.0.0",  # YOLOv8용
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "transformers>=4.30.0",
]

[tool.uvicorn]
app = "src.app.main:app"
host = "0.0.0.0"
port = 8000
reload = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
