[project]
name = "uv-python-test"
version = "0.1.0"
description = "UV를 이용한 Python 버전 관리 테스트 애플리케이션"
requires-python = ">=3.11"

dependencies = [
    "flask==2.3.3",
    "requests==2.31.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 